
[tool.poetry]
name = "molovol-rest"
version = "0.1.0"
description = "A REST interface for molovol."
authors = ["Benedikt S. Vogler <developer@benediktsvogler.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
Flask = "^2.0.2"
flask-cors = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
